<package>
  <name>vulcano_base_common</name>
  <version>1.0.0</version>
  <description>URDF description of the Vulcano Base Omnidirectional Robot.</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/vulcano_base_common</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/vulcano_base_common/issues</url>

  <author email="info@robotnik.es">Robotnik</author>

  <maintainer email="info@robotnik.es">Robotnik</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>vulcano_base_description</run_depend>
  <!-- run_depend>vulcano_base_pad</run_depend -->

  <export>
    <metapackage/>
  </export>
</package>
